objects/SGR_Opportunity_Census__c.object
<CustomObject>
    <description>This object is used  for</description>
    <fields>
        <fullName>Acc_Census_External_Id__c</fullName>
        <label>Acc Census External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Censuses</relationshipLabel>
        <relationshipName>Opportunity_Censuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age_New__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>YEAR( Opportunity__r.Renewal_Date__c ) -  YEAR(Date_of_Birth__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backend_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Backend Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COBRA__c</fullName>
        <formula>IF( Employee_Status_Code__c=&apos;Cobra&apos;, &apos;Y&apos;, &apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COBRA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CensusId__c</fullName>
        <formula>IF( Last_Name__c != null ,  LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+Id, Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CensusURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Composite_Rates__c</fullName>
        <label>Composite Rates</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Created_Date_only__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date only</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dental_Coverage__c</fullName>
        <formula>IF(Dental_Plan_ID__c&lt;&gt; null,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dental Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dental_Group_Number__c</fullName>
        <label>Dental Group Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_Group_Section__c</fullName>
        <label>Dental Group Section</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_Plan_ID__c</fullName>
        <label>Dental Plan ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_Tier__c</fullName>
        <label>Dental Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EO</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>EF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dental_comp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental comp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Status_Code__c</fullName>
        <label>Employee Status Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <label>Group Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Section_Number_Copy__c</fullName>
        <label>Group Section Number Copy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Section_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Section Number</label>
        <referenceTo>Group_Section__c</referenceTo>
        <relationshipLabel>Opportunity Censuses</relationshipLabel>
        <relationshipName>Opportunity_Censuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Health_Comp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>component level</description>
        <label>Health Comp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Health_Coverage__c</fullName>
        <formula>IF(Health_Plan_ID__c&lt;&gt; null,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Health Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Health_Group_Number__c</fullName>
        <label>Health Group Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Group_Section__c</fullName>
        <label>Health Group Section</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Plan_ID__c</fullName>
        <label>Health Plan ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Tier__c</fullName>
        <description>Only applicable to Health Subscriber section</description>
        <label>Health Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EO</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>EF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsTefra__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsTefra</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modify_Date_Only__c</fullName>
        <formula>DATEVALUE( LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modify Date Only</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicare_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medicare Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Benefit_Cancel_Date__c</fullName>
        <label>Member Benefit Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Benefit_Effective_Date__c</fullName>
        <label>Member Benefit Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Cancel_Date__c</fullName>
        <label>Member Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Characteristic_Type__c</fullName>
        <label>Member Characteristic Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Effective_Date__c</fullName>
        <label>Member Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Rates__c</fullName>
        <label>Member Rates</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Member_name__c</fullName>
        <formula>First_Name__c+&apos; &apos;+Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Number__c</fullName>
        <label>Membership Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Group_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Group Section</label>
        <referenceTo>SGR_Opportunity_Group_Section__c</referenceTo>
        <relationshipLabel>Opportunity Censuses</relationshipLabel>
        <relationshipName>Opportunity_Censuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is  look up  to  Opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Census</relationshipLabel>
        <relationshipName>Opportunity_Census</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <label>Plan Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Code__c</fullName>
        <label>Relationship Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SPS</fullName>
                </value>
                <value>
                    <fullName>DEP</fullName>
                </value>
                <value>
                    <fullName>DP</fullName>
                </value>
                <value>
                    <fullName>DIS</fullName>
                </value>
                <value>
                    <fullName>STD</fullName>
                </value>
                <value>
                    <fullName>XSP</fullName>
                </value>
                <value>
                    <fullName>SUB</fullName>
                </value>
                <value>
                    <fullName>CUS</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>SPD</fullName>
                </value>
                <value>
                    <fullName>SPP</fullName>
                </value>
                <value>
                    <fullName>SSP</fullName>
                </value>
                <value>
                    <fullName>XCU</fullName>
                </value>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>Domestic Partner</fullName>
                    <isActive>false</isActive>
                    <label>Domestic Partner</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Domestic Partner</fullName>
                </value>
                <value>
                    <fullName>Civil Union Spouse</fullName>
                </value>
                <value>
                    <fullName>Class II Dependent</fullName>
                </value>
                <value>
                    <fullName>Dependent Child</fullName>
                </value>
                <value>
                    <fullName>Disabled Dependent</fullName>
                </value>
                <value>
                    <fullName>Sponsored Dependent- Child</fullName>
                </value>
                <value>
                    <fullName>Sponsored Dep-Adult</fullName>
                </value>
                <value>
                    <fullName>Surviving Spouse</fullName>
                </value>
                <value>
                    <fullName>Ex-Civil Union Spouse</fullName>
                </value>
                <value>
                    <fullName>Ex-Spouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retiree_Copy__c</fullName>
        <label>Retiree Copy</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retiree__c</fullName>
        <formula>IF(Employee_Status_Code__c=&apos;Retired&apos;, &apos;Y&apos;, &apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retiree</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row__c</fullName>
        <label>Sub #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGR_DentalIsChecked__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DentalIsChecked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SGR_HealthIsChecked__c</fullName>
        <defaultValue>true</defaultValue>
        <label>HealthIsChecked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SGR_Row_Number_Backend__c</fullName>
        <formula>VALUE(Row__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Row Number Backend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SGR_VisionIsChecked__c</fullName>
        <defaultValue>true</defaultValue>
        <label>VisionIsChecked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Continuation_Copy__c</fullName>
        <label>State Continuation Copy</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Continuation__c</fullName>
        <formula>IF( (Employee_Status_Code__c=&apos;State Continuation&apos; &amp;&amp;   ISPICKVAL(Relationship__c, &apos;Subscriber&apos;)), &apos;Y&apos;, &apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Continuation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Number__c</fullName>
        <label>Subscriber ID Number</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscriber_number1__c</fullName>
        <formula>IF(Subscriber_Number__c!=null, null,TEXT(Subscriber_Number__c))</formula>
        <label>Subscriber ID Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tobacco_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tobacco Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tobacco_Y_N__c</fullName>
        <formula>IF(Tobacco_Use__c, &quot;Y&quot;, &quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tobacco{Y/N}</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Dental_Subscribers__c</fullName>
        <label>Total Number of Dental Subscribers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Health_Subscribers__c</fullName>
        <label>Total Number of Health Subscribers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Vision_Subscribers__c</fullName>
        <label>Total_Number_of_Vision_Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URE_Relationship_Code__c</fullName>
        <description>Maps the Relationship Code to URE Equivalent Value</description>
        <label>URE Relationship Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>OD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Comp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vision Comp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Coverage__c</fullName>
        <formula>IF(Vision_Plan_ID__c&lt;&gt;null,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vision Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Group_Number__c</fullName>
        <label>Vision Group Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Group_Section__c</fullName>
        <label>Vision Group Section</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Plan_ID__c</fullName>
        <description>Plan ID. Only applicable to Vision Subscriber section for NM &amp; MT.</description>
        <label>Vision Plan ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Tier__c</fullName>
        <description>Only applicable to Vision Subscriber section for NM &amp; MT.</description>
        <label>Vision Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EO</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>EF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Opportunity Census</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Relationship__c</columns>
        <columns>First_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Row__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Health_Plan_ID__c</columns>
        <columns>Vision_Plan_ID__c</columns>
        <columns>Dental_Plan_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Opportunity Census Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Censuses</pluralLabel>
    <recordTypes>
        <fullName>SGR_Opportunity_Census</fullName>
        <active>true</active>
        <description>SGR Opportunity Census Record Type</description>
        <label>SGR Opportunity Census</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Checkbox_Rule</fullName>
        <active>false</active>
        <description>When user select health coverage to disable the checkbox</description>
        <errorConditionFormula>IF( Health_Coverage__c  = true,  ISCHANGED(Health_Coverage__c  ) , false)</errorConditionFormula>
        <errorMessage>pass</errorMessage>
    </validationRules>
</CustomObject>